Cabe - Fixed height overflow issue

--- a/src/components/SkillList.css
+++ b/src/components/SkillList.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     width: 35vw;
     height: 55vh;
+    min-height: 400px;
     box-shadow: 0 20px 20px black;
 }
 
